Move Routing types to HerePlatform.Core
Move TransportMode, RoutingMode, RoutingAvoidFeature, TunnelCategory,
HazardousGoods, TruckOptions, EvOptions, TurnInstruction, RoutingRequest,
and RoutingResult to HerePlatform.Core.Routing. Update all usings in
services, tests, and docs.

--- a/docs/BlazorHerePlatform.Docs/_Imports.razor
+++ b/docs/BlazorHerePlatform.Docs/_Imports.razor
@@ -21,6 +21,7 @@
 @using HerePlatformComponents.Maps.Events
 @using HerePlatformComponents.Maps.UI
 @using HerePlatformComponents.Maps.Services
+@using HerePlatform.Core.Routing
 @using HerePlatformComponents.Maps.Services.Routing
 @using HerePlatformComponents.Maps.Services.Isoline
 @using HerePlatformComponents.Maps.Services.MatrixRouting
