--- a/docs/BlazorHerePlatform.Docs/_Imports.razor
+++ b/docs/BlazorHerePlatform.Docs/_Imports.razor
@@ -31,4 +31,5 @@
 @using HerePlatform.Core.Places
 @using HerePlatform.Core.Traffic
 @using HerePlatform.Core.Utilities
+@using HerePlatform.Core.Exceptions
 @using System.Globalization
