Register Autosuggest, Weather, RouteMatching in DI and add docs pages
Add service registrations in ServiceCollectionExtensions, TypeForwards
for all new public types (76 total), interactive docs pages, and
service definitions for the docs sidebar navigation.

--- a/docs/HerePlatform.RestClient.Docs/_Imports.razor
+++ b/docs/HerePlatform.RestClient.Docs/_Imports.razor
@@ -23,3 +23,6 @@
 @using HerePlatform.Core.Transit
 @using HerePlatform.Core.WaypointSequence
 @using HerePlatform.Core.Geofencing
+@using HerePlatform.Core.Search
+@using HerePlatform.Core.Weather
+@using HerePlatform.Core.RouteMatching
