Add EvChargePoints, MapImage, IntermodalRouting, TourPlanning models and infrastructure

--- a/docs/HerePlatform.RestClient.Docs/_Imports.razor
+++ b/docs/HerePlatform.RestClient.Docs/_Imports.razor
@@ -26,3 +26,7 @@
 @using HerePlatform.Core.Search
 @using HerePlatform.Core.Weather
 @using HerePlatform.Core.RouteMatching
+@using HerePlatform.Core.EvChargePoints
+@using HerePlatform.Core.MapImage
+@using HerePlatform.Core.IntermodalRouting
+@using HerePlatform.Core.TourPlanning
