--- a/docs/HerePlatform.Docs/wwwroot/docs/components/image-overlay/index.html
+++ b/docs/HerePlatform.Docs/wwwroot/docs/components/image-overlay/index.html
@@ -12,12 +12,12 @@
     <meta property="og:description" content="Overlay a static image on the map." />
     <meta property="og:url" content="https://emuuu.github.io/HerePlatform.NET/docs/components/image-overlay" />
     <meta property="og:site_name" content="HerePlatform.NET Docs" />
-    <meta property="og:image" content="https://emuuu.github.io/HerePlatform.NET/img/blazor-here-platform.svg" />
+    <meta property="og:image" content="https://emuuu.github.io/HerePlatform.NET/img/here-platform.svg" />
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:title" content="ImageOverlayComponent - HerePlatform.NET" />
     <meta name="twitter:description" content="Overlay a static image on the map." />
-    <script type="application/ld+json">[{"context":"https://schema.org","type":"TechArticle","headline":"ImageOverlayComponent","description":"Overlay a static image on the map.","url":"https://emuuu.github.io/HerePlatform.NET/docs/components/image-overlay","image":"https://emuuu.github.io/HerePlatform.NET/img/blazor-here-platform.svg","publisher":{"type":"Organization","name":"HerePlatform.NET"}},{"context":"https://schema.org","type":"BreadcrumbList","itemListElement":[{"type":"ListItem","position":1,"name":"Docs","item":"https://emuuu.github.io/HerePlatform.NET/"},{"type":"ListItem","position":2,"name":"Components","item":"https://emuuu.github.io/HerePlatform.NET/docs/components"},{"type":"ListItem","position":3,"name":"ImageOverlayComponent","item":"https://emuuu.github.io/HerePlatform.NET/docs/components/image-overlay"}]}]</script>
-    <link rel="icon" type="image/svg+xml" href="img/blazor-here-platform.svg" />
+    <script type="application/ld+json">[{"context":"https://schema.org","type":"TechArticle","headline":"ImageOverlayComponent","description":"Overlay a static image on the map.","url":"https://emuuu.github.io/HerePlatform.NET/docs/components/image-overlay","image":"https://emuuu.github.io/HerePlatform.NET/img/here-platform.svg","publisher":{"type":"Organization","name":"HerePlatform.NET"}},{"context":"https://schema.org","type":"BreadcrumbList","itemListElement":[{"type":"ListItem","position":1,"name":"Docs","item":"https://emuuu.github.io/HerePlatform.NET/"},{"type":"ListItem","position":2,"name":"Components","item":"https://emuuu.github.io/HerePlatform.NET/docs/components"},{"type":"ListItem","position":3,"name":"ImageOverlayComponent","item":"https://emuuu.github.io/HerePlatform.NET/docs/components/image-overlay"}]}]</script>
+    <link rel="icon" type="image/svg+xml" href="img/here-platform.svg" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
     <link href="lib/prismjs/prism.css" rel="stylesheet" />
