--- a/docs/HerePlatform.Docs/Pages/RestApi/Services/MatrixRoutingPage.razor
+++ b/docs/HerePlatform.Docs/Pages/RestApi/Services/MatrixRoutingPage.razor
@@ -30,6 +30,8 @@
                         <option value="@TransportMode.Truck">Truck</option>
                         <option value="@TransportMode.Pedestrian">Pedestrian</option>
                         <option value="@TransportMode.Bicycle">Bicycle</option>
+                        <option value="@TransportMode.Scooter">Scooter</option>
+                        <option value="@TransportMode.Taxi">Taxi</option>
                     </select>
                 </div>
             </div>
